Add SEO-friendly static HTML pages for all blog posts and main pages
- Created generate-blog-pages.js script to generate static HTML files
- Each blog post now has its own HTML file with proper SEO meta tags
- Added Open Graph, Twitter Cards, and structured data for better social sharing
- Includes canonical URLs and article metadata for search engines
- Smart redirect system: crawlers see static content, users get SPA
- Generated 22 blog post pages + main blog and tools pages
- Updated build process to include SEO page generation
- Significantly improved SEO while maintaining SPA functionality

This addresses the critical SEO issue where search engines couldn't index the site content.

--- a/vite-src/package.json
+++ b/vite-src/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run gravatar-to-favicon && npm run generate-sitemap && vite build",
+    "build": "npm run gravatar-to-favicon && npm run generate-sitemap && vite build && npm run generate-seo-pages",
     "build:dev": "vite build --mode development",
     "generate-sitemap": "node scripts/generate-sitemap.js",
+    "generate-seo-pages": "node scripts/generate-blog-pages.js",
     "gravatar-to-favicon": "node scripts/gravatar-to-favicon.js",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy:static": "rm -rf ../assets ../index.html ../favicon.* ../robots.txt ../sitemap.xml ../CNAME ../llm.txt && cp -r dist/* ../",
+    "deploy:static": "rm -rf ../assets ../index.html ../favicon.* ../robots.txt ../sitemap.xml ../CNAME ../llm.txt ../blog ../tools && cp -r dist/* ../",
     "deploy": "npm run build && npm run deploy:static"
   },
   "dependencies": {
